--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>AngularProject</title>
+  <title>yourRESOURCES</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/victormono@latest/dist/index.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
